@@ -1,3 +1,6 @@
+[COLOR yellow][B]v1.2.5[/B][/COLOR]
+* Temporary force users to migrate to new unified build - COMMENTED.
+* Renable the setting of auto cache clean on startup.
 [COLOR yellow][B]v1.2.4[/B][/COLOR]
 * Build skin switch prompt now shows up after fresh build install.
 * BUG Fix: Remove "default" attribute when editing lookandfeel.skin setting.
